--- a/style.css
+++ b/style.css
@@ -3,12 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     display: flex;
+    flex-direction: column;
     font-family: "Pridi", "Times New Roman", Georgia;
     color: rgb(77, 73, 73);
     background-color: rgba(0, 0, 0, 0.04);
     margin: 0;
+}
+.container {
+    display: flex;
+
 }
 .background {
     background-image: url(background-image.png);
@@ -56,9 +62,6 @@ img {
     
     
 }
-.form-row p {
-   
-}
 fieldset {
     border-style: none;
 }
@@ -67,4 +70,43 @@ input {
     border: solid rgba(185, 185, 185, 0.384) 1px;
     height: 25px;
     width: 200px;
+}
+legend {
+    margin-bottom: 1rem;
+}
+label {
+    font-family: "Pridi", "Times New Roman", Georgia;
+    font-weight: 300; 
+    
+}
+.bottom-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 2rem;
+    gap: 1rem;
+
+}
+.span-row {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+span {
+    font-weight: bold;
+}
+button {
+    font-size: 2rem;
+    padding: 1rem;
+    border-style: none;
+    border-radius: 1rem;
+    background-color: rgb(103, 177, 174);
+    color:wheat;
+}
+button:active {
+    border: solid black 1px;
+}
+input:focus {
+    outline: none;
+    border: solid rgb(101, 139, 201) 3px;
 }
