--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
+    
+}
+html {
+    height: 100%;
+    
 }
 
 body{
@@ -11,25 +16,37 @@ body{
     color: rgb(77, 73, 73);
     background-color: rgba(0, 0, 0, 0.04);
     margin: 0;
+    min-height: 100vh;
+    
 }
 .container {
     display: flex;
+    width: 100%;
+    height: 100vh;
+    
+    
 
 }
 .background {
     background-image: url(background-image.png);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    position: relative;
+    height: 100%;
     color: wheat;
+    flex: 1;
+    display: flex;
+   
 
 }
 .logo{
     display: flex;
     justify-content: center;
+    overflow: hidden;
     align-items: center;
     margin-top: 25vh;
     width: 40vw;
+    height: 4rem;
     font-size: 2rem;
     background-color: rgba(0, 0, 0, 0.5);
     
@@ -46,24 +63,29 @@ img {
     padding: 5rem;
 }
 .form-section {
-   
-    width: 100%;
+    flex: 1;
+    flex-grow: 1;
+    width: 60vw;
     margin: 0 auto; /* Center the form horizontally */
+   
 }
 .form-container {
-    width: 100%;
+    display: flex;
+    width: 60vw;
     background-color: white;
     padding: 5rem;
 }
 
 .form-row {
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
     
     
 }
 fieldset {
     border-style: none;
+   
 }
 input {
     border-radius: 4px;
